--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <title>LOCAR - Locadora de Veículos Quarto Período</title>
     <link rel="stylesheet" href=" ./css/stylesheet.css">
-    <link rel="stylesheet" href="./css/grid.css">
 </head>
 <body>
 <header id="header">
     <div class="row">
-        <div class="col col-desktop-3"><img src="./img/Logo.png" alt="Logo da Locar"></div>
+        <div class="col col-desktop-3"><a href="index.html"><img src="./img/Logo.png" alt="Logo da Locar"></a></div>
         <div class="col col-desktop-9">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#">Quem somos</a></li>
                     <li><a href="#">Veículos</a></li>
                     <li><a href="#">Equipe</a></li>
@@ -24,13 +23,44 @@
     <div class="row">
         <div class="col col-desktop-12 title">
             <h1>Te levando onde você quiser</h1>
-            <a href="#">Começar agora</a>
+            <a href="#" class="btn">Começar agora</a>
         </div>
     </div>
     </div>
 </header>
 <main>
-    <section id="how-it-work">Como funciona</section>
+    <section id="how-it-work">
+        <h2>Como funciona</h2>
+        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col col-desktop-4">
+                    <div class="icon-container">
+                        icone
+                    </div>
+                    <h3> Chat em tempo real</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
+                    <p><a href=""class="btn">Saiba mais</a></p>
+                </div>
+                <div class="col col-desktop-4">
+                    <div class="icon-container">
+                        icone
+                    </div>
+                    <h3>Grupo de trabalho</h3>
+                    <p>ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
+                    <p><a href="" class="btn">Saiba mais</a></p>
+                </div>
+                <div class="col col-desktop-4">
+                    <div class="icon-container>">
+                         icone
+                    </div>
+                    <h3>Locação de veiculos</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
+                    <p><a href="" class="btn">Saiba mais</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="ours-vehicles">Nossos Veículos</section>
     <section id="team">Nosso Time</section>
 </main>
