--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>LOCAR - Locadora de Veículos Quarto Período</title>
-    <link rel="stylesheet" href=" ./css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 <body>
 <header id="header">
@@ -36,7 +38,9 @@
             <div class="row">
                 <div class="col col-desktop-4">
                     <div class="icon-container">
-                        icone
+                        <span class="material-icons">
+                                schedule
+                            </span>
                     </div>
                     <h3> Chat em tempo real</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
@@ -44,15 +48,19 @@
                 </div>
                 <div class="col col-desktop-4">
                     <div class="icon-container">
-                        icone
+                        <span class="material-icons">
+                                work
+                            </span>
                     </div>
                     <h3>Grupo de trabalho</h3>
                     <p>ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
                     <p><a href="" class="btn">Saiba mais</a></p>
                 </div>
                 <div class="col col-desktop-4">
-                    <div class="icon-container>">
-                         icone
+                    <div class="icon-container">
+                         <span class="material-icons">
+                                directions_car
+                            </span>
                     </div>
                     <h3>Locação de veiculos</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies quis nisi in feugiat. Curabitur mattis blandit est, eget faucibus felis viverra non. Ut dui sapien, sodales et suscipit nec, ullamcorper quis diam.</p>
@@ -61,8 +69,55 @@
             </div>
         </div>
     </section>
-    <section id="ours-vehicles">Nossos Veículos</section>
-    <section id="team">Nosso Time</section>
+    <section id="ours-vehicles">
+        <h2>Nossos Veículos</h2>
+        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle1.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle2.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle3.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle4.jpg" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle5.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle6.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle7.jpg" alt=""></div>
+                <div class="col col-desktop-3"><img class="car-home" src="./img/vehicles/vehicle8.jpg" alt=""></div>
+            </div>
+            <div class="container">
+                <div class="col col-desktop-12"><a href="#" class="btn">Todos os veículos<i class="material-icons">arrow_forward</i></a></div>
+            </div>
+        </div>
+    </section>
+    <section id="team">
+        <h2>Nosso Time</h2>
+        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col col-offset-desktop-1 col-desktop-2">
+                    <div class="img-box-round"><img src="img/team/team1.jpg" alt=""></div>
+                    <p class="img-box-label">Matheus Loren</p>
+                </div>
+                <div class="col col-desktop-2">
+                    <div class="img-box-round"><img src="img/team/team2.jpg" alt=""></div>
+                    <p class="img-box-label">Marcos Lorr</p>
+                </div>
+                <div class="col col-desktop-2">
+                    <div class="img-box-round"><img src="img/team/team3.jpg" alt=""></div>
+                    <p class="img-box-label">Igor ferr</p>
+                </div>
+                <div class="col col-desktop-2">
+                    <div class="img-box-round"><img src="img/team/team4.jpg" alt=""></div>
+                    <p class="img-box-label">Lucas Torr</p>
+                </div>
+                <div class="col col-desktop-2">
+                    <div class="img-box-round"><img src="img/team/team5.jpg" alt=""></div>
+                    <p class="img-box-label">Mathias Soares</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <foorter id="footer">
     Rodapé
