--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -5,10 +5,10 @@
     <title>LOCAR - Locadora de Veículos Quarto Período</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 <body>
-<header id="header">
+<header id="header" class="page-home">
     <div class="row">
         <div class="col col-desktop-3"><a href="index.html"><img src="./img/Logo.png" alt="Logo da Locar"></a></div>
         <div class="col col-desktop-9">
@@ -31,7 +31,7 @@
     </div>
 </header>
 <main>
-    <section id="how-it-work">
+    <section id="how-it-work" class="section section-center">
         <h2>Como funciona</h2>
         <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="container">
@@ -69,7 +69,7 @@
             </div>
         </div>
     </section>
-    <section id="ours-vehicles">
+    <section id="ours-vehicles" class="section section-center">
         <h2>Nossos Veículos</h2>
         <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="container">
@@ -90,7 +90,7 @@
             </div>
         </div>
     </section>
-    <section id="team">
+    <section id="team"class="section section-center">
         <h2>Nosso Time</h2>
         <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="container">
@@ -119,9 +119,36 @@
         </div>
     </section>
 </main>
-<foorter id="footer">
-    Rodapé
-</foorter>
+<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col col-offset-desktop-1 col-desktop-3">
+                <p><a href="index.html"><img src="img/Logo.png" alt="" width="320" height="150"></a></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget nisl ac turpis rhoncus rhoncus. Pellentesque varius urna ipsum. Ut</p>
+            </div>
+            <div class="col col-offset-desktop-1 col-desktop-2">
+                <h3>Menu</h3>
+                <nav>
+                    <ul>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="quem-somos.html">Quem somos</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="equipe.html">Equipe</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col col-desktop-3 social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+</footer>
+<div id="copyright">
+    &copy; Locar - 2021 - Todos os direitos reservados
+</div>
 
 </body>
 </html>
