--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -133,7 +133,7 @@
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="quem-somos.html">Quem somos</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="equipe.html">Equipe</a></li>
+                        <li><a href="team.html">Equipe</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
