AULA SOBRE CONTATOS E TEAM

--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -15,10 +15,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#">Quem somos</a></li>
+                    <li><a href="quem-somos.html">Quem somos</a></li>
                     <li><a href="#">Veículos</a></li>
-                    <li><a href="#">Equipe</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="team.html">Equipe</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -132,7 +132,7 @@
                     <ul>
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="quem-somos.html">Quem somos</a></li>
-                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="#">Veiculos</a></li>
                         <li><a href="team.html">Equipe</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
