--- a/Locar_Walisson_Cabral/quem-somos.html
+++ b/Locar_Walisson_Cabral/quem-somos.html
@@ -18,7 +18,7 @@
                     <li><a href="quem-somos.html" class="active">Quem somos</a></li>
                     <li><a href="#">Veículos</a></li>
                     <li><a href="team.html">Team</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
