--- a/Locar_Walisson_Cabral/team.html
+++ b/Locar_Walisson_Cabral/team.html
@@ -16,10 +16,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html" >Home</a></li>
-                    <li><a href="#">Quem somos</a></li>
+                    <li><a href="quem-somos.html">Quem somos</a></li>
                     <li><a href="#">Veículos</a></li>
                     <li><a href="team.html" class="active">Team</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,45 +36,136 @@
         <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="container">
             <div class="row">
-                <div class="col col-offset-desktop-1 col-desktop-2">
+                <div class=" team-member col col-offset-desktop-1 col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team1.jpg" alt=""></div>
                     <p class="img-box-label">Matheus Loren</p>
+                    <div class="description">
+                        <h4>Matheus Loren</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                            <a href=""><img src="img/social-facebook.png" alt=""></a>
+                            <a href=""><img src="img/social-twitter.png" alt=""></a>
+                            <a href=""><img src="img/social-youtube.png" alt=""></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team2.jpg" alt=""></div>
                     <p class="img-box-label">Marcos Lorr</p>
+                    <div class="description">
+                        <h4>Marcos Lorr</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class= "social">
+                            <a href=""><img src="img/social-facebook.png" alt=""></a>
+                            <a href=""><img src="img/social-twitter.png" alt=""></a>
+                            <a href=""><img src="img/social-youtube.png" alt=""></a>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team3.jpg" alt=""></div>
-                    <p class="img-box-label">Igor ferr</p>
+                    <p class="img-box-label">Igor Ferr</p>
+                    <div class="description">
+                        <h4>Igor Ferr</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team4.jpg" alt=""></div>
                     <p class="img-box-label">Lucas Torr</p>
+                    <div class="description">
+                        <h4>Lucas Torr</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team5.jpg" alt=""></div>
                     <p class="img-box-label">Mathias Soares</p>
+                    <div class="description">
+                        <h4>Mathias Soares</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-offset-desktop-1 col-desktop-2">
+                <div class="team-member col col-offset-desktop-1 col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team6.jpg" alt=""></div>
                     <p class="img-box-label">Fabiana Soares</p>
+                    <div class="description">
+                        <h4>Fabiana Soares</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team7.jpg" alt=""></div>
                     <p class="img-box-label">Luan Monics</p>
+                    <div class="description">
+                        <h4>Luan Monics</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team8.jpg" alt=""></div>
                     <p class="img-box-label">Marcos Vitay</p>
+                    <div class="description">
+                        <h4>Marcos Vitay</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team9.jpg" alt=""></div>
                     <p class="img-box-label">Ana Beatriz</p>
+                    <div class="description">
+                        <h4>Ana Beatriz</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
-                <div class="col col-desktop-2">
+                <div class="team-member col col-desktop-2">
                     <div class="img-box-round"><img src="img/team/team10.jpg" alt=""></div>
-                    <p class="img-box-label">Amanda filho</p>
+                    <p class="img-box-label">Amanda Filho</p>
+                    <div class="description">
+                        <h4>Amanda Filho</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lectus eros. Donec eget ante sapien. Ut tempor ut ante ultricies mollis. Duis mi ante, fermentum eget sodales mollis, cursus porttitor libero.</p>
+                        <div class="social">
+                <a href=""><img src="img/social-facebook.png" alt=""></a>
+                <a href=""><img src="img/social-twitter.png" alt=""></a>
+                <a href=""><img src="img/social-youtube.png" alt=""></a>
+            </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -93,7 +184,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="quem-somos.html">Quem somos</a></li>
-                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="#">Veiculos</a></li>
                         <li><a href="team.html"class="active">Equipe</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
