Aula Introdução-JS
AULA DIA-14

--- a/Locar_Walisson_Cabral/team.html
+++ b/Locar_Walisson_Cabral/team.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html" >Home</a></li>
                     <li><a href="quem-somos.html">Quem somos</a></li>
-                    <li><a href="#">Veículos</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="team.html" class="active">Team</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -184,7 +184,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="quem-somos.html">Quem somos</a></li>
-                        <li><a href="#">Veiculos</a></li>
+                        <li><a href="veiculos.html">Veiculos</a></li>
                         <li><a href="team.html"class="active">Equipe</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
