--- a/Locar_Walisson_Cabral/index.html
+++ b/Locar_Walisson_Cabral/index.html
@@ -5,6 +5,7 @@
     <title>LOCAR - Locadora de Veículos Quarto Período</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="quem-somos.html">Quem somos</a></li>
-                    <li><a href="#">Veículos</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="team.html">Equipe</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -132,7 +133,7 @@
                     <ul>
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="quem-somos.html">Quem somos</a></li>
-                        <li><a href="#">Veiculos</a></li>
+                        <li><a href="veiculos.html">Veiculos</a></li>
                         <li><a href="team.html">Equipe</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
