--- a/Locar_Walisson_Cabral/veiculos.html
+++ b/Locar_Walisson_Cabral/veiculos.html
@@ -32,7 +32,7 @@
 </header>
 <main>
     <section class="section-veiculos">
-        <div class="container">
+        <div class="container" id="vehicles-list">
             <div class="row">
                 <div class="card mb-3" style="max-width: 100%;">
                     <div class="row g-0">
@@ -43,60 +43,16 @@
                             <div class="card-body">
                                 <h5 class="card-title">Volkswagen Amarok 3.0 V6 CD Highline 4x4 2019</h5>
                                 <p class="card-text">Diesel, Final da placa 0, airbag motorista, alarme, freios ABS, airbag passageiro, airbag lateral</p>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
                                 <p class="card-text" style="text-align: right"><b>R$ 215.000,00</b></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="card mb-3" style="max-width: 100%;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="./img/vehicles/toro.webp" class="img-fluid rounded-start img-veiculo" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Fiat Toro 2.0 TDI Volcano 4WD (Aut) 2021</h5>
-                                <p class="card-text">Diesel, Final da placa 8, airbag motorista, alarme, freios ABS, airbag passageiro, distribuição eletrônica de frenagem</p>
-                                <p class="card-text" style="text-align: right"><b>R$ 164.900,00</b></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="card mb-3" style="max-width: 100%;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="./img/vehicles/corolla.webp" class="img-fluid rounded-start img-veiculo" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Toyota Corolla 2.0 XEi Dynamic Force 2021</h5>
-                                <p class="card-text">Flex, Final da placa 4, distribuição eletrônica de frenagem, airbag motorista, alarme, freios ABS, airbag passageiro, airbag lateral, controle de tração</p>
-                                <p class="card-text" style="text-align: right"><b>R$ 139.900,00</b></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="card mb-3" style="max-width: 100%;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="./img/vehicles/rangerover.webp" class="img-fluid rounded-start img-veiculo" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Land Rover Range Rover Sport 3.0 SDV6 HSE 4wd 2015</h5>
-                                <p class="card-text">Diesel, Final da placa 0, distribuição eletrônica de frenagem, airbag motorista, alarme, freios ABS, airbag passageiro, airbag lateral, controle de tração</p>
-                                <p class="card-text" style="text-align: right"><b>R$ 309.000,00</b></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
 </main>
@@ -131,6 +87,6 @@
     &copy; Locar - 2021 - Todos os direitos reservados
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="./JS-Locar_Walisson_Cabral/main.js"></script>
 </body>
-
 </html>
